--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosmtplib==3.0.2
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asyncpg==0.30.0
@@ -25,7 +26,6 @@ python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.17
 requests==2.32.3
-resend==2.4.0
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
