--- a/requirements.txt
+++ b/requirements.txt
@@ -7,29 +7,43 @@ certifi==2024.12.14
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
 databases==0.9.0
 dependency-injector==4.43.0
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.4
+fonttools==4.55.3
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
 Jinja2==3.1.5
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.0
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
 passlib==1.7.4
+pillow==11.1.0
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
 PyJWT==2.10.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.17
+pytz==2024.2
 requests==2.32.3
+seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.2
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.0
