--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/realtorCRM
-    command: ["uvicorn", "app.app:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["/start.sh"]
     env_file:
       - ./app/.env
     depends_on:
