--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
+    "quoteProps": "preserve",
     "overrides": [
       {
         "files": "*.html",
