--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pillow==11.1.0
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
+pytest==8.3.4
 PyJWT==2.10.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -38,6 +39,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.17
 pytz==2024.2
 requests==2.32.3
+selenium==4.26.1
 seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
@@ -47,3 +49,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.0
+webdriver-manager==4.0.2
